# ready_set_bool

./: .gitignore  CMakeLists.txt
include/: Proposition.hpp  ready_set_bool.hpp
src/: Proposition.cpp  adder.cpp  common.cpp  conjunctive_normal_form.cpp  curve.cpp  eval_formula.cpp  eval_set.cpp  gray_code.cpp  multiplier.cpp  negation_normal_form.cpp  powerset.cpp  sat.cpp  truth_table.cpp
tests/: test_adder.cpp  test_conjunctive_normal_form.cpp  test_curve.cpp  test_eval_formula.cpp  test_eval_set.cpp  test_gray_code.cpp  test_multiplier.cpp  test_negation_normal_form.cpp  test_proposition_class.cpp  test_sat.cpp  test_subset.cpp  test_truth_table.cpp
